--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/_GridViewPartial_ClienteContactos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/_GridViewPartial_ClienteContactos.cshtml
@@ -1,10 +1,10 @@
-@using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_cliente";
-        settings.CallbackRouteValues = new { Controller = "Cliente", Action = "GridViewPartial_cliente" };
-        settings.KeyFieldName = "IdCliente";
-        settings.Width = Unit.Percentage(100);
+        settings.Name = "GridViewPartial_ClienteContactos";
+        settings.CallbackRouteValues = new { Controller = "ClienteContactos", Action = "GridViewPartial_ClienteContactos", IdCliente = ViewBag.IdCliente};
+        settings.KeyFieldName = "IdContacto";
+        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
@@ -47,67 +47,37 @@
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
-        //Evento para pintar de rojo las filas anuladas
-        settings.HtmlRowPrepared = (s, e) =>
-        {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
-            {
-                e.Row.ForeColor = System.Drawing.Color.Red;
-            }
-        };
+
         settings.Columns.Add(c =>
         {
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCliente = DataBinder.Eval(tc.DataItem, "IdCliente") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCliente = DataBinder.Eval(tc.DataItem, "IdCliente") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                //if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                //{
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCliente = DataBinder.Eval(tc.DataItem, "IdCliente"), IdContacto = DataBinder.Eval(tc.DataItem, "IdContacto") }) + "&nbsp;" +
+                    Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdCliente = DataBinder.Eval(tc.DataItem, "IdCliente"), IdContacto = DataBinder.Eval(tc.DataItem, "IdContacto") },
+                        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                );
+                //}
             });
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdCliente = ViewBag.IdCliente }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
+            c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdCliente", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("info_persona.pe_cedulaRuc", "Cédula/Ruc").Width = Unit.Percentage(10);
-        settings.Columns.Add("Descripcion_tip_cliente", "Tipo").Width = Unit.Percentage(20);
-        settings.Columns.Add("info_persona.pe_nombreCompleto", "Nombre completo").Width = Unit.Percentage(35);
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "EstadoBool";
-            column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "Contactos";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-                Html.DevExpress().HyperLink(hyperlink =>
-                {
-                    var keyValue = DataBinder.Eval(container.DataItem, "IdCliente");
-                    hyperlink.Properties.Text = "Contactos";
-                    hyperlink.NavigateUrl = Url.Action("Index", "ClienteContactos", new { IdEmpresa = DataBinder.Eval(container.DataItem, "IdEmpresa"), IdCliente = keyValue });
-                }).Render();
-            });
-        });
+        settings.Columns.Add("IdCliente", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(5);
+        settings.Columns.Add("Nombres", "Nombres").Width = System.Web.UI.WebControls.Unit.Percentage(40);
+        settings.Columns.Add("Telefono", "Teléfono").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("Correo", "Correo").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("Direccion", "Dirección").Width = System.Web.UI.WebControls.Unit.Percentage(30);
     });
 }
 @grid.Bind(Model).GetHtml()
