--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
@@ -469,6 +469,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="NumNota_Impresa">Observación factura</label>
+                                @Html.TextBoxFor(q => q.ObservacionFactura, new { @class = "form-control", @id = "ObservacionFactura" })
+                                @Html.ValidationMessageFor(q => q.ObservacionFactura, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -577,6 +588,7 @@
                 $("#IdVendedor").val(data.IdVendedor);
                 $("#IdTerminoPago").val(data.IdTerminoPago);
                 $("#IdCatalogo_FormaPago").val(data.IdCatalogo_FormaPago);
+                $("#ObservacionFactura").val(data.ObservacionFactura);
             },
             error: function (error) {
             }
