--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -128,10 +128,11 @@
             </div>
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="DatosCliente">Información adicional</label>
-                    <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
+                    <label for="IdPuntoVta">Contactos</label>
+                    @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_cliente_contactos, "IdContacto", "Nombres_combo"), new { @class = "form-control", @id = "IdContacto" })
+                    @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div> 
         </div>
 
         <div class="col-md-6">
@@ -240,7 +241,6 @@
     $(function () {
         get_info_termino_pago();
         get_info_cliente();
-        cargar_info_adicional();
         cargar_bodega();
         Set_NivelDescuento_x_FormaPago();
 
@@ -269,7 +269,7 @@
             Set_NivelDescuento_x_FormaPago();
         });
 
-        $('#ModalDesbloqueo').on('shown.bs.modal', function() { $("#ContraseniaAdministrador").focus(); }) 
+        $('#ModalDesbloqueo').on('shown.bs.modal', function() { $("#ContraseniaAdministrador").focus(); })
     });
 
     function Set_NivelDescuento_x_FormaPago() {
@@ -324,7 +324,7 @@
             error: function (error) {
             }
         });
-    };   
+    };
 
     function cargar_fecha_vencimiento() {
         var vida = Number($("#pf_plazo").val());
@@ -508,33 +508,32 @@
         }
     }
 
-    function cargar_info_adicional() {
-        var codigo = IdCliente.GetValue();
+function cargar_lista_contactos() {
+    var Id = IdCliente.GetValue();
 
-        if (codigo > 0)
-        {
-            var datos = {
-                IdCliente: codigo
+    if (Id > 0)
+    {
+        var datos = {
+            IdCliente: Id
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_lista_contactos", "ClienteContactos", new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres_combo + "</option>");
+                });
+            },
+            error: function (error) {
             }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("cargar_info_adicional", "Proforma",new { Area = "Facturacion"})',
-                async: false,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    $("#DatosCliente").val(data);
-                },
-                error: function (error) {
-                }
-            });
-        }
-        else{
-            $("#DatosCliente").val("");
-        }
+        });
     }
+}
 
-    
+
 
 </script>
