--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Nuevo.cshtml
@@ -233,10 +233,11 @@
                 </div>
                 <div class="col-md-12">
                     <div class="form-group">
-                        <label for="DatosCliente">Información adicional</label>
-                        <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
+                        <label for="IdPuntoVta">Contactos</label>
+                        @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_cliente_contactos, "IdContacto", "Nombres_combo"), new { @class = "form-control", @id = "IdContacto" })
+                        @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
                     </div>
-                </div>  
+                </div> 
                 <div class="col-md-3" id="datos_punto_venta1">
                     <div class="form-group">
                         <label for="vt_serie1">Establecimiento*</label>
@@ -507,7 +508,6 @@ $(function () {
     get_direccion();
     get_placa();
     GetDireccionOrigen();
-    cargar_contactos()
 
     $("#IdSucursal").change(function () {
         CargarPuntosDeVenta();
@@ -744,30 +744,29 @@ function get_direccion() {
     });
 }
 
-function cargar_contactos() {
-    var codigo = IdCliente.GetValue();
+function cargar_lista_contactos() {
+    var Id = IdCliente.GetValue();
 
-    if (codigo > 0)
+    if (Id > 0)
     {
         var datos = {
-            IdCliente: codigo
+            IdCliente: Id
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_contactos", "GuiaSinPrecios",new { Area = "Facturacion"})',
+            url: '@Url.Action("cargar_lista_contactos", "ClienteContactos", new { Area = "Facturacion"})',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $("#DatosCliente").val(data);
+                $.each(data, function (i, row) {
+                    $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres_combo + "</option>");
+                });
             },
             error: function (error) {
             }
         });
-    }
-    else{
-        $("#DatosCliente").val("");
     }
 }
 
