--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -61,6 +61,7 @@
     @Html.HiddenFor(q => q.IdBodega)
     @Html.HiddenFor(q => q.IdCbteVta)
     @Html.HiddenFor(q => q.vt_tipoDoc)
+    @Html.HiddenFor(q => q.cr_TotalCobro)
 
     if (@ViewBag.mensaje != null)
     {
