--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaSinPrecios/Anular.cshtml
@@ -123,16 +123,24 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdCliente"></label>
-                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarCliente();">
+                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarCliente();" title="Crear/Modificar Cliente">
                         <i class="fa fa-external-link-square"></i>
                     </button>
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="IdPuntoVta">Contactos</label>
                     @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_cliente_contactos, "IdContacto", "Nombres_combo"), new { @class = "form-control", @id = "IdContacto" })
                     @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdCliente"></label>
+                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarContacto();" title="Crear Contactos">
+                        <i class="fa fa-address-book"></i>
+                    </button>
                 </div>
             </div>
             <div class="col-md-3" id="datos_punto_venta1">
@@ -357,6 +365,9 @@
         $("#IdPuntoVta").change(function () {
         });
 
+        $("#IdContacto").change(function () {
+            SetDireccionDestino();
+        });
     });
 
     function MostrarModal() {
@@ -454,7 +465,31 @@ function cargar_lista_contactos() {
             }
         });
     }
+    else{
+        $("#IdContacto").empty();
+    }
 }
+
+    function SetDireccionDestino() {
+        var datos = {
+            IdCliente: IdCliente.GetValue(),
+            IdContacto: $("#IdContacto").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetDireccionDestino", "ClienteContactos",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#Direccion_Destino").val(data);
+
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
 
 
