--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteContactos/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_cliente_contactos_Info
 @{
-    ViewBag.Title = "Nueva contacto";
+    ViewBag.Title = "Nuevo contacto";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
