--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -56,6 +56,18 @@
             win.focus();
         }
     }
+
+    function CrearModificarContacto() {
+        var location = GetPathServer();
+        if(IdCliente.GetValue() > 0)
+        {
+            var win = window.open(location + "/Facturacion/ClienteContactos/Nuevo?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdCliente=" + IdCliente.GetValue(), '_blank');
+            win.focus();
+        }else
+        {
+            alert ("Debe seleccionar un cliente para crear contactos");
+        }
+    }
 </script>
 @model Core.Erp.Info.Facturacion.fa_guia_remision_Info
 @{
@@ -128,11 +140,19 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-10">
                 <div class="form-group">
                     <label for="IdPuntoVta">Contactos</label>
                     @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_cliente_contactos, "IdContacto", "Nombres_combo"), new { @class = "form-control", @id = "IdContacto" })
                     @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdCliente"></label>
+                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarContacto();" title="Crear Contactos">
+                        <i class="fa fa-address-book"></i>
+                    </button>
                 </div>
             </div>
             <div class="col-md-3" id="datos_punto_venta1">
@@ -357,6 +377,9 @@
         $("#IdPuntoVta").change(function () {
         });
 
+        $("#IdContacto").change(function () {
+            SetDireccionDestino();
+        });
     });
 
     function MostrarModal() {
@@ -454,6 +477,30 @@
                 }
             });
         }
+        else{
+            $("#IdContacto").empty();
+        }
+    }
+
+    function SetDireccionDestino() {
+        var datos = {
+            IdCliente: IdCliente.GetValue(),
+            IdContacto: $("#IdContacto").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetDireccionDestino", "ClienteContactos",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#Direccion_Destino").val(data);
+
+            },
+            error: function (error) {
+            }
+        });
     }
 </script>
 
