--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_CmbProducto_NotaDebitoFacturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_CmbProducto_NotaDebitoFacturacion.cshtml
@@ -20,7 +20,7 @@
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
 
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "SetPrecioProducto";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s, e){ SetPrecioProducto(s,e); CalcularValores(s,e); }";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeDebitoFacturacionController().get_list_bajo_demandaProducto,
     new Core.Erp.Web.Areas.Facturacion.Controllers.NotaDeDebitoFacturacionController().get_info_bajo_demandaProducto)
